fixed wrong background

--- a/_src/less/_portfolio.less
+++ b/_src/less/_portfolio.less
@@ -91,10 +91,10 @@
 }
 
 #casa-porto-santo {
-	@media(min-width:768px) {
-		background-image: url('../img/opti/backgrounds/bg-footer-small.jpg');
-	}
 	background-image: url('../img/opti/portfolio/casa-porto-santo/opti-casa-porto-santo-small.jpg');
+	@media(min-width:768px) {
+		background-image: url('../img/opti/portfolio/casa-porto-santo/opti-casa-porto-santo.jpg');
+	}
 }
 
 #casa-grandola {
